fix: 移除过时api